Ajout des statistiques de charge

--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -78,14 +78,21 @@
     },
     "plugins\/jeeda\/core\/template\/dashboard\/panel.php": {
         "Mes véhicules": "Mes véhicules",
+        "Statistiques": "Statistiques",
+        "Nombre charge": "Nombre de charges",
+        "Durée totale": "Durée totale",
+        "Energie totale": "Energie totale",
         "Moteur thermique": "Moteur thermique",
+        "Puissance moyenne de charge": "Puissance moyenne de charge",
         "Autonomie": "Autonomie",
         "Réservoir": "Réservoir",
         "Moteur electrique":  "Moteur electrique",
         "Batterie": "Batterie",
         "Recharge": "Recharge",
         "Charge": "Charge",
+        "Charges": "Charges",
         "Puissance": "Puissance",
+        "Energie injectée kw": "Energie injectée kw",
         "Limite": "Limite",
         "Temps": "Temps",
         "Consigne": "Consigne",
