--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -80,6 +80,7 @@
         "Mes véhicules": "Mes véhicules",
         "Statistiques": "Statistiques",
         "Nombre charge": "Nombre de charges",
+        "Efficience": "Efficience",
         "Durée totale": "Durée totale",
         "Energie totale": "Energie totale",
         "Moteur thermique": "Moteur thermique",
